disabled "protect.js" build

--- a/includes/_header.html
+++ b/includes/_header.html
@@ -15,8 +15,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex" />
 
-  <!-- @javascript protect -->
+  <script src="assets/js/protect.js"></script>
+
   <!-- @stylesheet normalize qtip2.min style ie9 -->
+
 
   <title>Auspibor legend</title>
 
