--- a/assets/css/_style-hd.sass
+++ b/assets/css/_style-hd.sass
@@ -4,7 +4,7 @@ html.hd
 
     &.bg
       background-repeat: repeat, no-repeat, no-repeat, no-repeat
-      background-size: auto, 100% 120%, 0,0
+      background-size: auto, cover, 0,0
 
   .candle
     background-size: 150px auto, 0
